# axiomOS

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG.md  PROPOSAL.md  README.md  README_RISCV.md  build-riscv.sh  build.rs  implementation.md  run-riscv.sh  rust-toolchain.toml  spec.txt
.cargo/: config.toml
.github/: CLAUDE.md
.github/workflows/: bpf-profiles.yml  build.yml  fuzz.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-bpf-end-to-end/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-rpi5-hardware-demos/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-benchmarks-validation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
config/rpi5/: config.txt
docs/: ARCHITECTURE_SUPPORT.md  PROGRESS.md  RISCV.md  RPI5_PROPOSAL.md  RPI5_TODO.md  WORK_REMAINING.md  benchmarks.md  howto.md  implementation.md  proposal.md  rk_bridge_protocol.md  task-branch.md  tasks.md
docs/platform/: ARCHITECTURE_SUPPORT.md  MULTI_ARCH_STRATEGY.md  PORTING_DESIGN.md  RISCV.md  RPI5_PROPOSAL.md
docs/security/: verifier-review-call.md
examples/bpf/: README.md  hello.bpf.c
kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker-x86_64.ld
kernel/crates/kernel_abi/src/: bpf.rs  lib.rs  process.rs  syscall.rs  time.rs  uio.rs
kernel/crates/kernel_bpf/: Cargo.toml  README.md
kernel/crates/kernel_bpf/benches/: interpreter.rs  maps.rs  verifier.rs
kernel/crates/kernel_bpf/docs/: ARCHITECTURE.md  BYTECODE.md  MAPS.md  PROFILES.md  QUICKREF.md  SCHEDULING.md  VERIFICATION.md
kernel/crates/kernel_bpf/fuzz/: Cargo.toml  README.md
kernel/crates/kernel_bpf/fuzz/fuzz_targets/: streaming_match.rs  verify_only.rs  verify_then_exec.rs
kernel/crates/kernel_bpf/src/: lib.rs
kernel/crates/kernel_bpf/src/attach/: gpio.rs  mod.rs  pwm.rs
kernel/crates/kernel_bpf/src/bytecode/: insn.rs  mod.rs  opcode.rs  program.rs  registers.rs
kernel/crates/kernel_bpf/src/execution/: interpreter.rs  jit_aarch64.rs  mod.rs
kernel/crates/kernel_bpf/src/execution/jit/: mod.rs
kernel/crates/kernel_bpf/src/loader/: mod.rs
kernel/crates/kernel_bpf/src/maps/: array.rs  hash.rs  mod.rs  ringbuf.rs  static_pool.rs  timeseries.rs
kernel/crates/kernel_bpf/src/profile/: failure.rs  memory.rs  mod.rs  scheduler.rs
kernel/crates/kernel_bpf/src/scheduler/: deadline.rs  mod.rs  policy.rs  queue.rs  throughput.rs
kernel/crates/kernel_bpf/src/signing/: signature.rs  verifier.rs
kernel/crates/kernel_bpf/src/verifier/: alu.rs  cfg.rs  core.rs  error.rs  helpers.rs  liveness.rs  mod.rs  pruner.rs  refine.rs  state.rs  streaming.rs
kernel/crates/kernel_bpf/tests/: bpf_integration.rs  gpio_integration.rs  profile_contracts.rs  pwm_integration.rs  semantic_consistency.rs
kernel/crates/kernel_devfs/src/: fs.rs  lib.rs  node.rs
kernel/crates/kernel_elfloader/src/: lib.rs
kernel/crates/kernel_physical_memory/src/: region.rs  types.rs
kernel/crates/kernel_syscall/src/: fcntl.rs  lib.rs  malloc.rs  mman.rs  ptr.rs  stat.rs  unistd.rs
kernel/crates/kernel_vfs/src/: fs.rs
kernel/crates/kernel_virtual_memory/: Cargo.toml
kernel/crates/kernel_virtual_memory/src/: addr.rs  lib.rs  segment.rs
kernel/demos/riscv/: Cargo.toml
kernel/src/: acpi.rs  apic.rs  backtrace.rs  hpet.rs  lib.rs  limine.rs  log.rs  main.rs  serial.rs  time.rs
kernel/src/arch/: gdt.rs  idt.rs  mod.rs  traits.rs  types.rs  x86_64.rs
kernel/src/arch/aarch64/: boot.S  boot.rs  context.rs  cpu.rs  dtb.rs  exception_vectors.S  exceptions.rs  gic.rs  interrupts.rs  mem.rs  mm.rs  mod.rs  paging.rs  phys.rs  shutdown.rs  syscall.rs
kernel/src/arch/riscv64/: boot.rs  context.rs  interrupts.rs  mod.rs  paging.rs  shutdown.rs  syscall.rs  trap.rs
kernel/src/bpf/: helpers.rs  jit_memory.rs  mod.rs
kernel/src/driver/: block.rs  iio.rs  mod.rs  pci.rs  ram.rs
kernel/src/driver/virtio/: block.rs  gpu.rs  hal.rs  mmio.rs
kernel/src/file/: devfs.rs  ext2.rs  mod.rs  pipe.rs
kernel/src/mcore/: context.rs  lapic.rs  mod.rs
kernel/src/mem/: heap.rs  memapi.rs  mod.rs  phys.rs  virt.rs
kernel/src/syscall/: access.rs  bpf.rs  mod.rs  process.rs  pwm.rs  validation.rs
scripts/: build-riscv.sh  build-rpi5.sh  deploy-rpi5.sh  run-riscv.sh  run-virt.sh
userspace/benchmark/: Cargo.toml
userspace/benchmark/src/: main.rs
userspace/bpf_loader/: Cargo.toml
userspace/bpf_loader/src/: main.rs
userspace/file_io_demo/: Cargo.toml
userspace/file_io_demo/src/: main.rs
userspace/file_structure/src/: lib.rs
userspace/fork_test/: Cargo.toml
userspace/fork_test/src/: main.rs
userspace/gpio_demo/src/: main.rs
userspace/iio_demo/: Cargo.toml
userspace/iio_demo/src/: main.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/minilib/src/: lib.rs
userspace/pwm_demo/: Cargo.toml
userspace/pwm_demo/src/: main.rs
userspace/rk_bridge/: Cargo.toml
userspace/rk_bridge/src/: event.rs  input.rs  lib.rs  main.rs  publisher.rs  ringbuf.rs
userspace/rk_cli/: Cargo.toml
userspace/rk_cli/src/: config.rs  main.rs  signing.rs
userspace/rk_cli/src/commands/: build.rs  deploy.rs  info.rs  init.rs  key.rs  list.rs  mod.rs  sign.rs  unload.rs  verify.rs
userspace/rk_uart_forwarder/: Cargo.toml
userspace/rk_uart_forwarder/src/: main.rs
userspace/safety_demo/: Cargo.toml
userspace/safety_demo/src/: main.rs
userspace/sched_switch_bridge_demo/: Cargo.toml
userspace/sched_switch_bridge_demo/src/: main.rs
userspace/sched_switch_demo/: Cargo.toml
userspace/sched_switch_demo/src/: main.rs
userspace/sched_switch_export_demo/: Cargo.toml
userspace/sched_switch_export_demo/src/: main.rs
userspace/sys_exit_demo/: Cargo.toml
userspace/sys_exit_demo/src/: main.rs
userspace/syscall_demo/src/: main.rs
userspace/timeseries_demo/: Cargo.toml
userspace/timeseries_demo/src/: main.rs
(+33 files in other folders)
