[package]
name = "muffinos"
version = "0.1.0"
edition = "2024"

default-run = "muffinos"

[build-dependencies]
ovmf-prebuilt = "0.2.3"
file_structure = { path = "userspace/file_structure" }

kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

init = { path = "userspace/init", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
exclude = [
  "kernel/demos/riscv",
]
members = [
  "kernel",
  "kernel/crates/kernel_abi",
  "kernel/crates/kernel_bpf",
  "kernel/crates/kernel_devfs",
  "kernel/crates/kernel_device",
  "kernel/crates/kernel_elfloader",
  "kernel/crates/kernel_memapi",
  "kernel/crates/kernel_pci",
  "kernel/crates/kernel_physical_memory",
  "kernel/crates/kernel_syscall",
  "kernel/crates/kernel_vfs",
  "kernel/crates/kernel_virtual_memory",
  "userspace/file_structure",
  "userspace/init",
  "userspace/minilib",
]
default-members = [
  ".",
  "kernel/crates/kernel_abi",
  "kernel/crates/kernel_devfs",
  "kernel/crates/kernel_device",
  "kernel/crates/kernel_elfloader",
  "kernel/crates/kernel_memapi",
  "kernel/crates/kernel_pci",
  "kernel/crates/kernel_physical_memory",
  "kernel/crates/kernel_syscall",
  "kernel/crates/kernel_vfs",
  "kernel/crates/kernel_virtual_memory",
  "userspace/file_structure",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[workspace.dependencies]
acpi = "5.2"
addr2line = { version = "0.25", default-features = false, features = [
  "fallible-iterator",
  "rustc-demangle",
] }
bitfield = "0.19"
bitflags = "2.10"
conquer-once = { version = "0.4", default-features = false }
cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
raw-cpuid = "11"
elf = { version = "0.7", default-features = false, features = ["nightly"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
jiff = { version = "0.2", default-features = false, features = ["alloc"] }
limine = "0.5"
linked_list_allocator = "0.10"
linkme = "0.3"
log = "0.4"
mkfs-ext2 = { git = "https://github.com/tsatke/mkfs" }
mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
rustc-demangle = "0.1"
sha3 = { version = "0.11.0-rc.3", default-features = false }
spin = "0.10"
thiserror = { version = "2.0", default-features = false }
uart_16550 = "0.4"
virtio-drivers = "0.12"
volatile = { version = "0.6", features = ["derive"] }
x2apic = "0.5"
x86_64 = "0.15"
riscv = "0.11"
aarch64-cpu = "9.4"
zerocopy = { version = "0.9.0-alpha.0", features = ["alloc", "derive"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"