[package]
name = "muffinos"
version = "0.1.0"
edition = "2021"

default-run = "muffinos"

[build-dependencies]
ovmf-prebuilt = "0.2.3"
file_structure = { path = "userspace/file_structure" }

# x86_64 dependencies
init_x86 = { package = "init", path = "userspace/init", artifact = "bin", target = "x86_64-unknown-none", optional = true }
gpio_demo_x86 = { package = "gpio_demo", path = "userspace/gpio_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
pwm_demo_x86 = { package = "pwm_demo", path = "userspace/pwm_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
timeseries_demo_x86 = { package = "timeseries_demo", path = "userspace/timeseries_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
iio_demo_x86 = { package = "iio_demo", path = "userspace/iio_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
syscall_demo_x86 = { package = "syscall_demo", path = "userspace/syscall_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
file_io_demo_x86 = { package = "file_io_demo", path = "userspace/file_io_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
safety_demo_x86 = { package = "safety_demo", path = "userspace/safety_demo", artifact = "bin", target = "x86_64-unknown-none", optional = true }
fork_test_x86 = { package = "fork_test", path = "userspace/fork_test", artifact = "bin", target = "x86_64-unknown-none", optional = true }
bpf_loader_x86 = { package = "bpf_loader", path = "userspace/bpf_loader", artifact = "bin", target = "x86_64-unknown-none", optional = true }
benchmark_x86 = { package = "benchmark", path = "userspace/benchmark", artifact = "bin", target = "x86_64-unknown-none", optional = true }
kernel_x86 = { package = "kernel", path = "kernel", artifact = "bin", target = "x86_64-unknown-none", optional = true, features = ["cloud-profile"] }

# aarch64 dependencies
init_aarch64 = { package = "init", path = "userspace/init", artifact = "bin", target = "aarch64-unknown-none", optional = true }
gpio_demo_aarch64 = { package = "gpio_demo", path = "userspace/gpio_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
pwm_demo_aarch64 = { package = "pwm_demo", path = "userspace/pwm_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
timeseries_demo_aarch64 = { package = "timeseries_demo", path = "userspace/timeseries_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
iio_demo_aarch64 = { package = "iio_demo", path = "userspace/iio_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
syscall_demo_aarch64 = { package = "syscall_demo", path = "userspace/syscall_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
file_io_demo_aarch64 = { package = "file_io_demo", path = "userspace/file_io_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
safety_demo_aarch64 = { package = "safety_demo", path = "userspace/safety_demo", artifact = "bin", target = "aarch64-unknown-none", optional = true }
fork_test_aarch64 = { package = "fork_test", path = "userspace/fork_test", artifact = "bin", target = "aarch64-unknown-none", optional = true }
bpf_loader_aarch64 = { package = "bpf_loader", path = "userspace/bpf_loader", artifact = "bin", target = "aarch64-unknown-none", optional = true }
benchmark_aarch64 = { package = "benchmark", path = "userspace/benchmark", artifact = "bin", target = "aarch64-unknown-none", optional = true }
kernel_aarch64 = { package = "kernel", path = "kernel", artifact = "bin", target = "aarch64-unknown-none", optional = true, features = ["cloud-profile"] }

[features]
default = ["x86_64_deps"]
x86_64_deps = [
  "dep:init_x86",
  "dep:gpio_demo_x86",
  "dep:pwm_demo_x86",
  "dep:timeseries_demo_x86",
  "dep:iio_demo_x86",
  "dep:syscall_demo_x86",
  "dep:file_io_demo_x86",
  "dep:safety_demo_x86",
  "dep:fork_test_x86",
  "dep:bpf_loader_x86",
  "dep:benchmark_x86",
  "dep:kernel_x86",
]
aarch64_deps = [
  "dep:init_aarch64",
  "dep:gpio_demo_aarch64",
  "dep:pwm_demo_aarch64",
  "dep:timeseries_demo_aarch64",
  "dep:iio_demo_aarch64",
  "dep:syscall_demo_aarch64",
  "dep:file_io_demo_aarch64",
  "dep:safety_demo_aarch64",
  "dep:fork_test_aarch64",
  "dep:bpf_loader_aarch64",
  "dep:benchmark_aarch64",
  "dep:kernel_aarch64",
]

[workspace]
exclude = [
  "kernel/demos/riscv",
  "userspace/rk_bridge",
]
members = [
  "kernel",
  "kernel/crates/kernel_abi",
  "kernel/crates/kernel_bpf",
  "kernel/crates/kernel_devfs",
  "kernel/crates/kernel_device",
  "kernel/crates/kernel_elfloader",
  "kernel/crates/kernel_memapi",
  "kernel/crates/kernel_pci",
  "kernel/crates/kernel_physical_memory",
  "kernel/crates/kernel_syscall",
  "kernel/crates/kernel_vfs",
  "kernel/crates/kernel_virtual_memory", "userspace/bpf_loader",
  "userspace/file_structure",
  "userspace/init",
  "userspace/minilib",
  "userspace/gpio_demo",
  "userspace/pwm_demo",
  "userspace/timeseries_demo",
  "userspace/iio_demo",
  "userspace/syscall_demo",
  "userspace/file_io_demo",
  "userspace/safety_demo",
  "userspace/fork_test",
  "userspace/benchmark",
]
default-members = [
  ".",
  "kernel/crates/kernel_abi",
  "kernel/crates/kernel_devfs",
  "kernel/crates/kernel_device",
  "kernel/crates/kernel_elfloader",
  "kernel/crates/kernel_memapi",
  "kernel/crates/kernel_pci",
  "kernel/crates/kernel_physical_memory",
  "kernel/crates/kernel_syscall",
  "kernel/crates/kernel_vfs",
  "kernel/crates/kernel_virtual_memory",
  "userspace/file_structure",
]

[dependencies]

[target.'cfg(not(target_os = "none"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }

[workspace.dependencies]
acpi = "5.2"
addr2line = { version = "0.25", default-features = false, features = [
  "fallible-iterator",
  "rustc-demangle",
] }
bitfield = "0.19"
bitflags = "2.10"
conquer-once = { version = "0.4", default-features = false }
cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
raw-cpuid = "11"
either = { version = "1.15", default-features = false }
elf = { version = "0.7", default-features = false, features = ["nightly"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
jiff = { version = "0.2", default-features = false, features = ["alloc"] }
limine = "0.5"
linked_list_allocator = "0.10"
linkme = "0.3"
log = "0.4"
mkfs-ext2 = { git = "https://github.com/tsatke/mkfs" }
mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
rustc-demangle = "0.1"
sha3 = { version = "0.11.0-rc.3", default-features = false }
spin = "0.10"
thiserror = { version = "2.0", default-features = false }
uart_16550 = "0.4"
virtio-drivers = "0.12"
volatile = { version = "0.6", features = ["derive"] }
x2apic = "0.5"
x86_64 = "0.15"
riscv = "0.11"
aarch64-cpu = "9.4"
zerocopy = { version = "0.9.0-alpha.0", features = ["alloc", "derive"] }
fdt = "0.1.5"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
